# stanford_algorithms_cplusplus

./: CMakeLists.txt  README.md
data/: sorted_array.txt
include/: count_inversions.h  inversions.hpp
src/: count_inversions.cxx  inversions.cpp
